Add dataset and headers

--- a/k-Means.ipynb
+++ b/k-Means.ipynb
@@ -1,12 +1,78 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cc07c745",
+   "metadata": {},
+   "source": [
+    "<a class=\"anchor\" id=\"0.1\"></a>\n",
+    "# **Table of Contents**\n",
+    "1. [Introduction](#1)\n",
+    "2. [Changelog](#2)\n",
+    "3. [Business Understanding](#3)\n",
+    "4. [Data Understanding](#4)\n",
+    "5. [Data Preperation](#5)\n",
+    "6. [Modeling](#6)\n",
+    "7. [Evaluation](#7)\n",
+    "8. [Improvements](#8)\n",
+    "9. [Conclusion](#9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ae8e5c7",
+   "metadata": {},
+   "source": [
+    "# **1. Introduction** <a class=\"anchor\" id=\"1\"></a>\n",
+    "[Table of Contents](#0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8a6c9c2",
+   "metadata": {},
+   "source": [
+    "# **2. Changelog** <a class=\"anchor\" id=\"2\"></a>\n",
+    "[Table of Contents](#0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c10278",
+   "metadata": {},
+   "source": [
+    "# **3. Business Understanding** <a class=\"anchor\" id=\"3\"></a>\n",
+    "[Table of Contents](#0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd6c8145",
+   "metadata": {},
+   "source": [
+    "# **4. Data Understanding** <a class=\"anchor\" id=\"4\"></a>\n",
+    "[Table of Contents](#0.1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41c2f81",
+   "metadata": {},
+   "source": [
+    "# **5. Data Preperation** <a class=\"anchor\" id=\"5\"></a>\n",
+    "[Table of Contents](#0.1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5531b0d9",
+   "id": "63f5d808",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# **6. Modeling** <a class=\"anchor\" id=\"6\"></a>\n",
+    "[Table of Contents](#0.1)"
+   ]
   }
  ],
  "metadata": {
